# fireslurm

./: .dir-locals.el  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  README.org  batch.py  fireslurm.py  flake.nix  pyproject.toml  run.py  sync.py
example-configs/: fireslurm.yaml
fireslurm/: __main__.py  args.py  batch.py  run.py  sync.py  utils.py  validation.py  zipper.py
old/: batch.sh  bench.py  run.sh  sync.sh
src/fireslurm/: __main__.py  args.py  batch.py  config.py  run.py  slurm.py  sync.py  utils.py  validation.py
tests/: test_configs.py  test_pyslurm.py
