[project]
name = "fireslurm"
description = """Combine Firesim's SoC & FPGA-accelerated simulation with \
                 Slurm's job scheduling!"""
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "CUSTOM" }
dynamic = ["version"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/karljoad/firesim-slurm"
FAQ = "https://github.com/karljoad/firesim-slurm"
Documentation = "https://github.com/karljoad/firesim-slurm"
Repository = "https://github.com/karljoad/firesim-slurm.git"
Issues = "https://github.com/karljoad/firesim-slurm/issues"

[project.scripts]
fireslurm = "fireslurm.__main__:main"

[build-system]
requires = [
    "installer == 0.7.0",  # Needed for installing pure python packages at build time
    "packaging == 25.0",   # Needed for build which is needed for setuptools
    "pyproject_hooks == 1.2.0", # Needed for build which is needed for setuptools
    "wheel == 0.46.2", # Needed for build which is needed for setuptools
    "build == 1.3.0", # Needed for build which is needed for setuptools
    "setuptools == 80.9.0",
    "pyyaml >= 6.0.3",
]

[tool.ruff]
line-length = 100
include = ["*.py"]
exclude = ["old/*"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
